--- a/BanHang/Views/Products/Index.cshtml
+++ b/BanHang/Views/Products/Index.cshtml
@@ -145,7 +145,7 @@
                                         <div class="product-item @ViewBag.ProductCategoryAlias">
                                             <div class="product discount product_filter">
                                                 <div class="product_image">
-                                                    <img src="@strImge" alt="@item.Title">
+                                                    <img src="@strImge" width="180" height="150" alt="@item.Title">
                                                 </div>
                                                 <div class="favorite favorite_left"></div>
                                                 @if (item.PriceSale > 0)
@@ -166,10 +166,10 @@
                                                     }
                                                 </div>
                                             </div>
-                                            <div class="red_button add_to_cart_button"><a href="#" class="btnAddToCart" data-id="@item.Id">add to cart</a></div>
-                                        </div>
+                                            <div class="red_button add_to_cart_button"><a href="/chi-tiet/@item.Alias-p@(item.Id)" class="btnAddToCart" data-id="@item.Id">add to cart</a></div>
+                                        @*</div>*@
                                         <!-- Product Sorting -->
-                                        <div class="product_sorting_container product_sorting_container_bottom clearfix">
+                                        <!--<div class="product_sorting_container product_sorting_container_bottom clearfix">
                                             <ul class="product_sorting">
                                                 <li>
                                                     <span>Show:</span>
@@ -182,7 +182,7 @@
                                                         <li class="num_sorting_btn"><span>04</span></li>
                                                     </ul>
                                                 </li>
-                                            </ul>
+                                            </ul>-->
                                             @*<span class="showing_results">Showing 1–3 of 12 results</span>
                                                 <div class="pages d-flex flex-row align-items-center">
                                                     <div class="page_current">
