--- a/BanHang/Views/Account/Login.cshtml
+++ b/BanHang/Views/Account/Login.cshtml
@@ -27,10 +27,11 @@
                     <div class="form-group">
                         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
                         <div class="col-md-10">
-                            @Html.PasswordFor(m => m.Password, new { @class = "form-control pwd" })
+                                @Html.PasswordFor(m => m.Password, new { @class = "form-control pwd" })
+                                <input type="button" class="btnShow" value="show" style="display:inline" />
                             @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                         </div>
-                        <input type="button" class="btnShow" value="show" />
+                        
                     </div>
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
