--- a/BanHang/Views/Account/Login.cshtml
+++ b/BanHang/Views/Account/Login.cshtml
@@ -28,9 +28,8 @@
                         @Html.LabelFor(m => m.Password, new { @class = "col-md-2 control-label" })
                         <div class="col-md-10">
                                 @Html.PasswordFor(m => m.Password, new { @class = "form-control pwd" })
-                                <input type="button" class="btnShow" value="show" style="display:inline" />
+                                <input type="button" class="btnShow" value="Show" style="display:inline" />
                             @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
-                            <input type="button" class="btnShow" value="show" />
                         </div>
                     </div>
                     <div class="form-group">
