--- a/BanHang/Areas/Admin/Views/Account/Edit.cshtml
+++ b/BanHang/Areas/Admin/Views/Account/Edit.cshtml
@@ -15,7 +15,7 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.HiddenFor(model => model.Id)
-    <div class="form-group">
+    @*<div class="form-group">
         @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
@@ -44,14 +44,15 @@
             @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
         </div>
-    </div>
+    </div>*@
     <div class="form-group">
         <label>Role</label>
         @Html.DropDownListFor(x => x.Role, ViewBag.Role as SelectList, "-Chọn Quyền-", new { @class = "form-control" })
     </div>
-
-
-
+    @Html.HiddenFor(model => model.UserName)
+    @Html.HiddenFor(model => model.FullName)
+    @Html.HiddenFor(model => model.Phone)
+    @Html.HiddenFor(model => model.Email)
     @Html.HiddenFor(model => model.PasswordHash)
     @Html.HiddenFor(model => model.SecurityStamp)
     @Html.HiddenFor(model => model.LockoutEnabled)
