--- a/BanHang/Views/Shared/Error.cshtml
+++ b/BanHang/Views/Shared/Error.cshtml
@@ -5,7 +5,15 @@
     ViewBag.Title = "Error";
     Layout = "~/Views/Shared/View.cshtml";
 }
+<style>
+    .error {
+        display: grid;
+        place-items: center;
+    }
+</style>
+<div class="error">
+    <h1 class="text-danger">Error.</h1>
+    <h2 class="text-danger">An error occurred while processing your request.</h2>
+</div>
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
 
