--- a/BanHang/Views/Products/Details.cshtml
+++ b/BanHang/Views/Products/Details.cshtml
@@ -27,7 +27,7 @@
         </div>
 
         <div class="row">
-            <div class="col-lg-7">
+            <div class="col-lg-5">
                 @if (Model.ProductImage != null && Model.ProductImage.Any())
                 {
                     <div class="single_product_pics">
@@ -52,6 +52,9 @@
                         </div>
                     </div>
                 }
+            </div>
+            <div class="col-lg-3">
+                  
             </div>
             <div class="col-lg-5">
                 <div class="product_details">
