--- a/BanHang/Views/Shared/_Layout.cshtml
+++ b/BanHang/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-6">
-                            <div class="top_nav_left">free ship</div>
+                            <div class="top_nav_left">Miễn phí giao hàng</div>
                         </div>
                         <div class="col-md-6 text-right">
                             <div class="top_nav_right">
@@ -51,12 +51,12 @@
                                                 {
                                                     Session.Abandon();
                                             <a href="#">
-                                                My Account
+                                                tài khoản
                                                 <i class="fa fa-angle-down"></i>
                                             </a>
                                             <ul class="account_selection">
-                                                <li><a href="@Url.Action("Login","Account")"><i class="fa fa-sign-in" aria-hidden="true"></i>Sign In</a></li>
-                                                <li><a href="@Url.Action("Register","Account")"><i class="fa fa-user-plus" aria-hidden="true"></i>Register</a></li>
+                                                <li><a href="@Url.Action("Login","Account")"><i class="fa fa-sign-in" aria-hidden="true"></i>đăng nhập</a></li>
+                                                <li><a href="@Url.Action("Register","Account")"><i class="fa fa-user-plus" aria-hidden="true"></i>đăng ký</a></li>
                                             </ul>
                                         }
                                         else
@@ -221,11 +221,12 @@
         </div>*@
 
         <!-- Footer -->
+        <br />
 
         <footer class="footer">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg-6">
+                    @*<div class="col-lg-6">
                         <div class="footer_nav_container d-flex flex-sm-row flex-column align-items-center justify-content-lg-start justify-content-center text-center">
                             <ul class="footer_nav">
                                 <li><a href="#">Blog</a></li>
@@ -233,8 +234,8 @@
                                 <li><a href="contact.html">Contact us</a></li>
                             </ul>
                         </div>
-                    </div>
-                    <div class="col-lg-6">
+                    </div>*@
+                    @*<div class="col-lg-6">
                         <div class="footer_social d-flex flex-row align-items-center justify-content-lg-end justify-content-center">
                             <ul>
                                 <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
@@ -244,7 +245,7 @@
                                 <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
                             </ul>
                         </div>
-                    </div>
+                    </div>*@
                 </div>
                 <div class="row">
                     <div class="col-lg-12">
