--- a/BanHang/Views/Products/Partial_ProductSales.cshtml
+++ b/BanHang/Views/Products/Partial_ProductSales.cshtml
@@ -15,7 +15,7 @@
                                 <div class="owl-item product_slider_item">
                                     <div class="product-item @ViewBag.ProductCategoryAlias">
                                         <div class="product discount product_filter">
-                                            <div class="product_image">
+                                            <div class="product_image" style="height:300px">
                                                 <img src="@strImge" alt="@item.Title">
                                             </div>
                                             <div class="favorite favorite_left"></div>
