--- a/BanHang/Views/Account/ForgotPassword.cshtml
+++ b/BanHang/Views/Account/ForgotPassword.cshtml
@@ -1,6 +1,8 @@
-﻿@model BanHang.Models.ForgotPasswordViewModel
+﻿
+@model BanHang.Models.ForgotPasswordViewModel
 @{
-    ViewBag.Title = "Forgot your password?";
+    ViewBag.Title = "ForgotPassword";
+    Layout = "~/Views/Shared/View.cshtml";
 }
 
 <h2>@ViewBag.Title.</h2>
