--- a/BanHang/Views/Account/ForgotPasswordConfirmation.cshtml
+++ b/BanHang/Views/Account/ForgotPasswordConfirmation.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewBag.Title = "Forgot Password Confirmation";
+    Layout = "~/Views/Shared/View.cshtml";
 }
 
 <hgroup class="title">
@@ -8,6 +9,7 @@
 <div>
     <p>
         Please check your email to reset your password.
+        <a href="https://accounts.google.com/InteractiveLogin/signinchooser?continue=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F%3Ftab%3Drm%26ogbl&emr=1&followup=https%3A%2F%2Fmail.google.com%2Fmail%2Fu%2F0%2F%3Ftab%3Drm%26ogbl&osid=1&passive=1209600&service=mail&ifkv=Af_xneEooB1R9oxQuP54NY0rYICxe5EpLhKC5mmlbfJiM8l3JpUp0L5P6ppx1eQy5LGUA2ZYyrTYDw&flowName=GlifWebSignIn&flowEntry=ServiceLogin">Click here</a>
     </p>
 </div>
 	
