--- a/BanHang/Views/AddToCart/EditAddToCart.cshtml
+++ b/BanHang/Views/AddToCart/EditAddToCart.cshtml
@@ -2,6 +2,7 @@
 @model List<BanHang.Models.EF.AddToCart>
 @{
     ViewBag.Title = "EditAddToCart";
+    Layout = "~/Views/Shared/View.cshtml";
 }
 
 
