--- a/BanHang/Views/AddToCart/CheckOut.cshtml
+++ b/BanHang/Views/AddToCart/CheckOut.cshtml
@@ -11,7 +11,7 @@
 <link rel="stylesheet" type="text/css" href="~/Content/asets/styles/single_styles.css">
 <link rel="stylesheet" type="text/css" href="~/Content/asets/styles/single_responsive.css">
 <div>
-    <div class="container single_product_container">
+    <div class="container single_product_container" style="margin-top:160px">
         <div class="row">
             <div style=" left:50px; top:70px" class="col-lg-12">
                 <h2>Thông tin khách hàng Thanh Toán</h2>
