--- a/BanHang/Views/AddToCart/CheckOutSuccess.cshtml
+++ b/BanHang/Views/AddToCart/CheckOutSuccess.cshtml
@@ -7,7 +7,7 @@
 <link rel="stylesheet" type="text/css" href="~/Content/asets/styles/single_styles.css">
 <link rel="stylesheet" type="text/css" href="~/Content/asets/styles/single_responsive.css">
 
-    <div class="container single_product_container">
+    <div class="container single_product_container" style="margin-top:160px">
         <div class="row">
             <div class="col">
 
