--- a/BanHang/Views/Products/Index.cshtml
+++ b/BanHang/Views/Products/Index.cshtml
@@ -148,14 +148,14 @@
                                                     <img src="@strImge" width="180" height="150" alt="@item.Title">
                                                 </div>
                                                 <div class="favorite favorite_left"></div>
-                                                @if (item.PriceSale > 0)
+                                                @if (item.PriceSale > 0 && item.IsSale == true)
                                                 {
                                                     <div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>sale</span></div>
                                                 }
                                                 @* <div class="product_bubble product_bubble_right product_bubble_red d-flex flex-column align-items-center"><span>-$20</span></div>*@
                                                 <div class="product_info">
                                                     <h6 class="product_name"><a href="#">@item.Title</a></h6>
-                                                    @if (item.PriceSale > 0)
+                                                    @if (item.PriceSale > 0 && item.IsSale==true)
                                                     {
                                                         <div class="product_price">@BanHang.Common.Common.FormatNumber(item.PriceSale, 0)<span>@BanHang.Common.Common.FormatNumber(item.Price, 0)</span></div>
 
