--- a/BanHang/Views/Shared/_Layout.cshtml
+++ b/BanHang/Views/Shared/_Layout.cshtml
@@ -230,7 +230,7 @@
 
         <footer class="footer">
             <div class="container">
-                <div class="row">
+                @*<div class="row">*@
                     @*<div class="col-lg-6">
                         <div class="footer_nav_container d-flex flex-sm-row flex-column align-items-center justify-content-lg-start justify-content-center text-center">
                             <ul class="footer_nav">
@@ -251,7 +251,7 @@
                             </ul>
                         </div>
                     </div>*@
-                </div>
+                @*</div>*@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="footer_nav_container">
