--- a/BanHang/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
+++ b/BanHang/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
@@ -116,15 +116,15 @@
                     </p>
                 </a>
             </li>
-            <li class="nav-item">
+            <!--<li class="nav-item">
                 <a href="/news" class="nav-link">
                     <i class="nav-icon fas fa-th"></i>
                     <p>
-                        Shipper
+                        Shipper-->
                         @*<span class="right badge badge-danger">New</span>*@
-                    </p>
+                    <!--</p>
                 </a>
-            </li>
+            </li>-->
             <li class="nav-item">
                 <a href="~/Admin/Order" class="nav-link">
                     <i class="nav-icon fas fa-th"></i>
