--- a/BanHang/Areas/Admin/Views/ProductCategory/Edit.cshtml
+++ b/BanHang/Areas/Admin/Views/ProductCategory/Edit.cshtml
@@ -96,7 +96,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.CreatedDate, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.CreatedDate, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.CreatedDate, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                                 @Html.ValidationMessageFor(model => model.CreatedDate, "", new { @class = "text-danger" })
                             </div>
                         </div>
@@ -104,7 +104,7 @@
                         <div class="form-group">
                             @Html.LabelFor(model => model.ModifierDate, htmlAttributes: new { @class = "control-label col-md-2" })
                             <div class="col-md-10">
-                                @Html.EditorFor(model => model.ModifierDate, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.EditorFor(model => model.ModifierDate, new { htmlAttributes = new { @class = "form-control", @readonly = "readonly" } })
                                 @Html.ValidationMessageFor(model => model.ModifierDate, "", new { @class = "text-danger" })
                             </div>
                         </div>
