--- a/BanHang/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
+++ b/BanHang/Areas/Admin/Views/Shared/_PartialSideBar.cshtml
@@ -65,15 +65,15 @@
                     </p>
                 </a>
             </li>
-            <li class="nav-item">
+            <!--<li class="nav-item">
                 <a href="/admin/post" class="nav-link">
                     <i class="nav-icon fas fa-th"></i>
                     <p>
-                        Bài Viết
+                        Bài Viết-->
                         @*<span class="right badge badge-danger">New</span>*@
-                    </p>
+                    <!--</p>
                 </a>
-            </li>
+            </li>-->
 
             <!--<li class="nav-item">
     <a href="/admin/post" class="nav-link">
