--- a/BanHang/Areas/Admin/Views/Order/Index.cshtml
+++ b/BanHang/Areas/Admin/Views/Order/Index.cshtml
@@ -80,23 +80,36 @@
                                 <td class="text-center">@item.CreatedDate</td>
                                 <td class="text-center">@item.ModifierDate</td>
                                 <td class="text-center">@(item.TypePayment==1?"COD":"Chuyển khoản")</td>
-                                <td class="text-center">@(item.Status == 1? "chưa thanh toán" : "đã thanh toán")</td>
+                                @*<td class="text-center">@(item.Status == 1? "chưa thanh toán" : "đã thanh toán")</td>*@
+                                <td class="text-center">
+                                    @if (item.Status == 1)
+                                    {
+                                        <span>chưa thanh toán</span>
+                                    }
+                                    else
+                                    {
+                                        <span>đã thanh toán</span>
+                                    }
+                                    
+                                </td>
                                 <td>
                                     <a href="/admin/Order/Details/@item.Id" class="btn btn-sm btn-primary">Chi tiết</a>
+                                    <a href="#" class="btn btn-sm btn-danger btnCapNhat" data-id="@item.Id">Cập nhật</a>
                                     @if (Request.IsAuthenticated)
                                     {
                                         if (User.IsInRole("Admin"))
                                         {
                                             <a href="#" data-id="@item.Id" class="btn btn-sm btn-danger btnDelete">Xóa</a>
-                                        }
-                                        else
-                                            if (User.IsInRole("SHIP"))
-                                        {
-                                            <a href="#" data-id="@item.Id" class="btn btn-sm btn-success">Nhận hàng</a>
+
                                         }
                                     }
-
-                                    </td>
+                                    @*else
+                if (User.IsInRole("SHIP"))
+        {
+            <a href="#" data-id="@item.Id" class="btn btn-sm btn-success">Nhận hàng</a>
+        }
+        }*@
+                                </td>
                             </tr>
                             i++;
                         }
@@ -120,6 +133,35 @@
     <!-- /.card -->
 
 </section>
+<div class="modal fade" id="modal-default">
+<div class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h4 class="modal-title">Cập nhật trạng thái</h4>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <input type="hidden" id="txtOrderId" value="0" />
+            <div class="form-group">
+                <label>Trạng thái</label>
+                <select class="form-control" id="ddTrangThai">
+                    <option value="2">
+                        Đã thanh toán
+                    </option>
+                </select>
+            </div>
+        </div>
+        <div class="modal-footer justify-content-between">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Đóng</button>
+            <button type="button" class="btn btn-primary" id="btnLuu">Lưu</button>
+        </div>
+    </div>
+    <!-- /.modal-content -->
+</div>
+<!-- /.modal-dialog -->
+</div>
 <!-- /.content -->
 
 @section scripts{
@@ -214,6 +256,28 @@
             //        }
             //    });
             //});
+        });
+        $(document).ready(function () {
+            $('body').on('click', '.btnCapNhat', function () {
+                var id = $(this).data("id");
+                $('#txtOrderId').val(id);
+                $('#modal-default').modal('show');
+            });
+
+            $('body').on('click', '#btnLuu', function () {
+                var id = $('#txtOrderId').val();
+                var tt = $('#ddTrangThai').val();
+                $.ajax({
+                    url: '/admin/order/UpdateTT',
+                    type: 'POST',
+                    data: { id: id, trangthai: tt },
+                    success: function (res) {
+                        if (res.Success) {
+                            location.reload();
+                        }
+                    }
+                });
+            });
         });
     </script>
 }
