--- a/BanHang/Views/Profile/Edit.cshtml
+++ b/BanHang/Views/Profile/Edit.cshtml
@@ -44,7 +44,7 @@
         </div>
         <div class="form-group">
             
-            @Html.DisplayFor(model => model.Role)
+            @Html.HiddenFor(model => model.Role)
         </div>
         @Html.HiddenFor(model => model.UserName)
         @Html.HiddenFor(model => model.PasswordHash)
