--- a/BanHang/Views/Profile/Edit.cshtml
+++ b/BanHang/Views/Profile/Edit.cshtml
@@ -27,7 +27,7 @@
             @Html.ValidationMessageFor(model => model.FullName, "", new { @class = "text-danger" })
         </div>
     </div>
-    <div class="form-group">
+    <div class="form-group" style="margin-left:20px">
         <label for="exampleInputFile">Ảnh</label>
         <div class="input-group">
             <div class="custom-file">
@@ -83,7 +83,6 @@
             };
             finder.popup();
         }
-
     </script>
 }
 
