--- a/BanHang/Views/Shared/_Layout.cshtml
+++ b/BanHang/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
     <script src="~/Content/assets/js/jquery-3.2.1.min.js"></script>
     @Scripts.Render("~/bundles/jqueryval")
 
+
 </head>
 <body>
     <div class="super_container">
@@ -42,102 +43,102 @@
                         </div>
                         <div class="col-md-6 text-right">
                             <div class="top_nav_right">
-                               
+
 
                                 <ul class="top_nav_menu">
                                     @*@if (!Request.IsAuthenticated)
-                                    {
-                                        Session.Abandon();
-                                        <image style=" width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="~/Uploads/images/slider_1.jpg" class="round-image" alt="Avatar" />
+                                        {
+                                            Session.Abandon();
+                                            <image style=" width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="~/Uploads/images/slider_1.jpg" class="round-image" alt="Avatar" />
 
-                                    }
-                                    else
-                                    {
-                                        <image style=" width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="@Model.Ava" class="round-image" alt="Avatar" />
+                                        }
+                                        else
+                                        {
+                                            <image style=" width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="@Model.Ava" class="round-image" alt="Avatar" />
 
-                                    }*@
+                                        }*@
 
 
 
                                     <!-- Currency / Language / My Account -->
 
 
-                                <li class="account">
+                                    <li class="account">
 
-                                    @if (!Request.IsAuthenticated)
-                                    {
-                                        
-                                            
-                                        
-                                        Session.Abandon();
-                                        <a href="#">
-                                            <image style=" width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="~/Uploads/images/slider_1.jpg" class="round-image" alt="Avatar" />
-
-                                            tài khoản
-
-                                            <i class="fa fa-angle-down"></i>
-                                        </a>
-                                        @*<ul class="navbar_user">
-                <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i></a></li>
-
-            </ul>*@
-                                        <ul class="account_selection ">
-                                            <li><a style="font-size: 10px;" href="@Url.Action("Login","Account")"><i class="fa fa-sign-in" aria-hidden="true"></i>đăng nhập</a></li>
-                                            <li><a style="font-size: 10px;" href="@Url.Action("Register","Account")"><i class="fa fa-user-plus" aria-hidden="true"></i>đăng ký</a></li>
-
-                                        </ul>
-
-                                    }
-                                    else
-                                    {
-                                        if (User.IsInRole("Admin"))
+                                        @if (!Request.IsAuthenticated)
                                         {
-                                 <a href="#">
-                                    @*<image style=" width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="@Model.Ava" class="round-image" alt="Avatar" />*@
-                                    @User.Identity.Name
-     
-                                    <i class="fa fa-angle-down"></i>
 
-                                </a>
-                                 <ul class="account_selection">
-                                     <li class="Role">
-                                         <a style="font-size: 10px;" href="~/Admin/Home/Index">Quản Lý Trang</a>
-                                     </li>
-                                     @Html.Action("AddToCartPartial", "AddToCart")
-                                     <li>
-                                         <a style="font-size: 10px;" href="~/Profile/Index/@User.Identity.GetUserId()" class="nav-link">
-                                             trang thông tin
-                                         </a>
-                                     </li>
-                                     <li><a style="font-size: 10px;" href="javascript:document.getElementById('logoutForm').submit()" class="nav-link"><i class="fa fa-user-plus" aria-hidden="true"></i>Log Off</a></li>
 
-                                 </ul>
 
+                                            Session.Abandon();
+                                            <a href="#">
+                                                <image style=" width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="~/Uploads/images/slider_1.jpg" class="round-image" alt="Avatar" />
+
+                                                tài khoản
+
+                                                <i class="fa fa-angle-down"></i>
+                                            </a>
+                                            @*<ul class="navbar_user">
+                                                    <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+                                                    <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i></a></li>
+
+                                                </ul>*@
+                                            <ul class="account_selection ">
+                                                <li><a style="font-size: 10px;" href="@Url.Action("Login","Account")"><i class="fa fa-sign-in" aria-hidden="true"></i>đăng nhập</a></li>
+                                                <li><a style="font-size: 10px;" href="@Url.Action("Register","Account")"><i class="fa fa-user-plus" aria-hidden="true"></i>đăng ký</a></li>
+
+                                            </ul>
 
                                         }
                                         else
                                         {
-                                            <a  href="#">
-                                                @User.Identity.Name
-                                                <i class="fa fa-angle-down"></i>
+                                            if (User.IsInRole("Admin"))
+                                            {
+                                                <a href="#">
+                                                    @*<image style=" width: 50px; height: 50px; border-radius: 50%; object-fit: cover;" x="0" y="0" src="@Model.Ava" class="round-image" alt="Avatar" />*@
+                                                    @User.Identity.Name
 
-                                            </a>
-                                            <ul class="account_selection">
+                                                    <i class="fa fa-angle-down"></i>
 
-                                                @Html.Action("AddToCartPartial", "AddToCart")
-                                                <li>
-                                                    <a style="font-size: 10px;" href="~/Profile/Index/@User.Identity.GetUserId()" class="nav-link">
-                                                        trang thông tin
-                                                    </a>
-                                                </li>
-                                                <li><a style="font-size: 10px;" href="javascript:document.getElementById('logoutForm').submit()" class="nav-link">Log Off</a></li>
+                                                </a>
+                                                <ul class="account_selection">
+                                                    <li class="Role">
+                                                        <a style="font-size: 10px;" href="~/Admin/Home/Index">Quản Lý Trang</a>
+                                                    </li>
+                                                    @Html.Action("AddToCartPartial", "AddToCart")
+                                                    <li>
+                                                        <a style="font-size: 10px;" href="~/Profile/Index/@User.Identity.GetUserId()" class="nav-link">
+                                                            trang thông tin
+                                                        </a>
+                                                    </li>
+                                                    <li><a style="font-size: 10px;" href="javascript:document.getElementById('logoutForm').submit()" class="nav-link"><i class="fa fa-user-plus" aria-hidden="true"></i>Log Off</a></li>
 
-                                            </ul>
+                                                </ul>
+
+
+                                            }
+                                            else
+                                            {
+                                                <a href="#">
+                                                    @User.Identity.Name
+                                                    <i class="fa fa-angle-down"></i>
+
+                                                </a>
+                                                <ul class="account_selection">
+
+                                                    @Html.Action("AddToCartPartial", "AddToCart")
+                                                    <li>
+                                                        <a style="font-size: 10px;" href="~/Profile/Index/@User.Identity.GetUserId()" class="nav-link">
+                                                            trang thông tin
+                                                        </a>
+                                                    </li>
+                                                    <li><a style="font-size: 10px;" href="javascript:document.getElementById('logoutForm').submit()" class="nav-link">Log Off</a></li>
+
+                                                </ul>
+                                            }
+
                                         }
-
-                                    }
-                                </li>
+                                    </li>
 
                                 </ul>
                             </div>
@@ -320,6 +321,8 @@
     @*@Scripts.Render("~/bundles/bootstrap")*@
 
     @RenderSection("scripts", required: false)
+    <script src="~/Content/ckeditor/ckeditor.js"></script>
+    <script src="~/Content/ckfinder/ckfinder.js"></script>
 </body>
 
 
