--- a/BanHang/Views/Products/Index.cshtml
+++ b/BanHang/Views/Products/Index.cshtml
@@ -166,7 +166,7 @@
                                                     }
                                                 </div>
                                             </div>
-                                            <div class="red_button add_to_cart_button"><a href="/chi-tiet/@item.Alias-p@(item.Id)" class="btnAddToCart" data-id="@item.Id">add to cart</a></div>
+                                            <div class="red_button add_to_cart_button"><a href="/chi-tiet/@item.Alias-p@(item.Id)" class="btnAddToCart" data-id="@item.Id">Chi tiết</a></div>
                                         @*</div>*@
                                         <!-- Product Sorting -->
                                         <!--<div class="product_sorting_container product_sorting_container_bottom clearfix">
