--- a/BanHang/Views/Profile/Edit.cshtml
+++ b/BanHang/Views/Profile/Edit.cshtml
@@ -4,6 +4,7 @@
     ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 <link rel="stylesheet" type="text/css" href="~/Content/assets/styles/main_styles.css">
 <link rel="stylesheet" type="text/css" href="~/Content/asets/styles/single_styles.css">
 <link rel="stylesheet" type="text/css" href="~/Content/asets/styles/single_responsive.css">
@@ -26,7 +27,17 @@
                 @Html.ValidationMessageFor(model => model.FullName, "", new { @class = "text-danger" })
             </div>
         </div>
-
+        <div class="form-group" style="margin-left:20px">
+            <label for="exampleInputFile">Ảnh</label>
+            <div class="input-group">
+                <div class="custom-file">
+                    @Html.TextBoxFor(model => model.Ava, new { @id = "txtImage", @class = "form-control" })
+                </div>
+                <div class="input-group-append">
+                    <input type="button" value="Tải ảnh" onclick="BrowseServer('txtImage');" />
+                </div>
+            </div>
+        </div>
         <div class="form-group">
             @Html.LabelFor(model => model.Phone, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -42,10 +53,7 @@
                 @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
             </div>
         </div>
-        <div class="form-group">
-            
-            @Html.HiddenFor(model => model.Role)
-        </div>
+        @Html.HiddenFor(model => model.Role)
         @Html.HiddenFor(model => model.UserName)
         @Html.HiddenFor(model => model.PasswordHash)
         @Html.HiddenFor(model => model.SecurityStamp)
@@ -60,37 +68,6 @@
             </div>
         </div>
     </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Phone, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Phone, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Phone, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    @Html.HiddenFor(model => model.Role)
-    @Html.HiddenFor(model => model.UserName)
-    @Html.HiddenFor(model => model.PasswordHash)
-    @Html.HiddenFor(model => model.SecurityStamp)
-    @Html.HiddenFor(model => model.LockoutEnabled)
-
-
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-
-            <input type="submit" value="Save" class="btn btn-default" a href="~/Profile/Index/@User.Identity.GetUserId()" />
-
-        </div>
-    </div>
-</div>
 }
 
 <!-- /.content -->
@@ -104,6 +81,4 @@
             finder.popup();
         }
     </script>
-
 }
-
