--- a/BanHang/Views/Comment/Create.cshtml
+++ b/BanHang/Views/Comment/Create.cshtml
@@ -14,7 +14,7 @@
     </div>
 
     <div class="col-3 text-left">
-        <input type="submit" class=" btn btn-success" value="Thêm" onClick="test">
+        <input type="text" class=" btn btn-success" value="Thêm" onClick="test">
     </div>
         }
         else
@@ -26,7 +26,7 @@
 </div>
 @section scripts{
     <script src="~/Content/assets/js/single_custom.js"></script>
-    <script>
+    @*<script>
         function Create(id, url) {
             debugger;
             $.ajax({
@@ -40,6 +40,6 @@
                 }
             });
         }
-    </script>
+    </script>*@
 }
 
